profile alignment fix ref https://github.com/mozilla/kitsune/issues/3697

--- a/kitsune/sumo/static/sumo/less/main.less
+++ b/kitsune/sumo/static/sumo/less/main.less
@@ -683,7 +683,7 @@ form .submit {
 
   @media screen and (min-width: 970px) {
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
   }
 }
 
